@@ -36,7 +36,6 @@ exportClasses(ReloadedMatrix)
 exportClasses(WrapperArray)
 exportClasses(WrapperArraySeed)
 exportMethods(DelayedArray)
-exportMethods(chunkdim)
 exportMethods(dim)
 exportMethods(dimnames)
 exportMethods(extract_array)
@@ -67,7 +66,6 @@ importFrom(BiocGenerics,type)
 importFrom(DelayedArray,DelayedArray)
 importFrom(DelayedArray,RegularArrayGrid)
 importFrom(DelayedArray,blockApply)
-importFrom(DelayedArray,chunkdim)
 importFrom(DelayedArray,colAutoGrid)
 importFrom(DelayedArray,currentViewport)
 importFrom(DelayedArray,getAutoBlockLength)
