@@ -2,6 +2,10 @@
 \title{alabaster.matrix News}
 \encoding{UTF-8}
 
+\section{Version 1.8.0}{\itemize{
+\item Deprecated the WrapperArraySeed in favor of direct inheritance from DelayedUnaryIsoOp.
+}}
+
 \section{Version 1.6.0}{\itemize{
 \item Support the SVT_SparseMatrix version 1 class definition in \code{saveObject()}.
 However, note that this was not implemented for the soft-deprecated \code{writeSparseMatrix()}, which now errors if such objects are passed in.
